added nav and banner section

--- a/index.html
+++ b/index.html
@@ -11,15 +11,37 @@
     <header>
         <nav class="navbar display-flex"> 
             <h3 class="brand">Fitness</h3>
-            <ul class="nav-links display-flex">
+            <ul class="nav-links display-flex ">
                     <!-- li.nav-items*4>a.nav-link                                 -->
-                    <li class="nav-items"><a href="" class="nav-link"> Home </a></li>
-                    <li class="nav-items"><a href="" class="nav-link">Service</a></li>
-                    <li class="nav-items"><a href="" class="nav-link">Contact</a></li>
-                    <li class="nav-items"><a href="" class="nav-link"> About</a></li>
+                    <li class="nav-items"><a href="" class="nav-link text-white"> Home </a></li>
+                    <li class="nav-items"><a href="" class="nav-link text-white">Service</a></li>
+                    <li class="nav-items"><a href="" class="nav-link text-white">Contact</a></li>
+                    <li class="nav-items"><a href="" class="nav-link text-white"> About</a></li>
                    
             </ul>
         </nav>
+        <div class="banner-container display-flex">
+            <div class="banner-text-content">
+                <h3 class="banner-title text-white">Get body in <br> <span class="span-title Miama-font">shape</span> & stay healthy</h3>
+                <p class="banner-description">To get my body in shape and stay healthy, I commit to regular exercise, balanced nutrition, and maintaining an active lifestyle</p>
+            <button class="btn-primary">Join Club Now!</button>
+            <button class="btn-download">Download App</button>
+            </div>
+            <div class="banner-img">
+                <img src="images/images 2.png" alt="">
+                <div class="box">
+                    <div></div>
+                    <div>
+                        <h3>350+</h3>
+                        <p>Video tutorial</p>
+                    </div>
+                </div>
+                <div class="box-2">
+                    <h3>500+</h3>
+                    <p>Free Workout Videos</p>
+                </div>
+            </div>
+        </div>
     </header>
     <main></main>
     <footer></footer>
