--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Versatile</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+   
 </head>
 <body class="font-inter bg-color">
     <header>
@@ -19,24 +21,30 @@
                     <li class="nav-items"><a href="" class="nav-link text-white"> About</a></li>
                    
             </ul>
+            <div class="ham-barger">
+                <i class="fa-solid fa-bars"></i>
+            </div>
         </nav>
         <div class="banner-container display-flex">
             <div class="banner-text-content">
                 <h3 class="banner-title text-white">Get body in <br> <span class="span-title Miama-font">shape</span> & stay healthy</h3>
                 <p class="banner-description">To get my body in shape and stay healthy, I commit to regular exercise, balanced nutrition, and maintaining an active lifestyle</p>
+                <br>
+            <div class="btn-container">
             <button class="btn-primary">Join Club Now!</button>
-            <button class="btn-download">Download App</button>
+            <button class="btn-download text-white">Download App</button>
+            </div>
             </div>
             <div class="banner-img">
                 <img src="images/images 2.png" alt="">
-                <div class="box">
-                    <div></div>
+                <div class="box display-flex">
+                    <div class="round-div"></div>
                     <div>
                         <h3>350+</h3>
                         <p>Video tutorial</p>
                     </div>
                 </div>
-                <div class="box-2">
+                <div class="box-2 display-flex">
                     <h3>500+</h3>
                     <p>Free Workout Videos</p>
                 </div>
