added habits section and updated responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -51,7 +51,52 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main class="text-white">
+        <section class="habits-container">
+            <h3 class="section-title">
+                Change Your Habits
+            </h3>
+            <p class="section-description">
+                Change your habits to create a healthier, more productive lifestyle that aligns with your long-term goals.
+            </p>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="images/image 3.png" alt="">
+                    </div>
+                   <div> <h3 class="card-title text-white">Movement</h3>
+                    <p class="card-description text-white">Regular movement is essential for maintaining physical health and boosting mental well-being</p></div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="images/image 2.png" alt="">
+                    </div>
+                    <div>
+                    <h3 class="card-title text-white">Time</h3>
+                    <p class="card-description text-white">Managing your time effectively is key to achieving your goals and maintaining a balanced life</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="images/image 4.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="card-title text-white">Practice</h3>
+                    <p class="card-description text-white">Consistent practice is the foundation for mastering any skill and achieving lasting success.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="images/image 5.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="card-title text-white">Weight Loss</h3>
+                    <p class="card-description text-white">Weight loss is best achieved through a combination of healthy eating, regular exercise.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
