added run and easily section and also completed responsive

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </div>
     </header>
     <main class="text-white">
+        <!-- habits section start -->
         <section class="habits-container">
             <h3 class="section-title">
                 Change Your Habits
@@ -96,6 +97,22 @@
                 </div>
             </div>
         </section>
+        <!-- habits section ends -->
+         <!-- Run an Extra 
+Mile Easily start  -->
+<section class="run-easily-section display-flex">
+    <div class="run-content-container">
+        <h3 class="run-title">Run an Extra <br>
+            Mile Easily</h3>
+            <p class="run-description">
+                With consistent training and gradual progress, you can run an extra mile easily and improve your endurance over time."
+            </p>
+            <button class="btn-primary">Join Now</button>
+    </div>
+    <div class="run-img-container">
+        <img src="images/run.jpg" alt="">
+    </div>
+</section>
     </main>
     <footer></footer>
 </body>
