added some value

--- a/index.html
+++ b/index.html
@@ -113,6 +113,40 @@ Mile Easily start  -->
         <img src="images/run.jpg" alt="">
     </div>
 </section>
+<!-- Trainings and Exercises section start -->
+ <section class="training-exercises">
+        <h3 class="training-title">Trainings and Exercises</h3>
+        <p class="training-description">
+            Regular trainings and exercises are crucial for building strength, improving endurance, and enhancing overall fitness
+        </p>
+        <div class="training-img-container">
+            <div class="row-1">
+                <img src="images/exercise1.jpg" alt="">
+            <p>Exercise-1</p>
+            </div>
+            <div class="row-2">
+                <img src="images/exercise2.png" alt="">
+            <p>Exercise-2</p>
+            </div>
+            <div class="row-3">
+                <img src="images/exercise3.jpg" alt="">
+            <p>Exercise-3</p>
+            </div>
+            <div class="row-4">
+                <img src="images/exercise4.png" alt="">
+            <p>Leg Press: Works the quadriceps and glutes</p>
+            </div>
+            <div class="row-5">
+                <img src="images/exercise5.jpg" alt="">
+            <p>Leg Press: Works the quadriceps and glutes</p>
+            </div>
+            <div class="row-4">
+                <img src="images/exercise6.jpg" alt="">
+            <p>Leg Press: Works the quadriceps and glutes</p>
+            </div>
+        </div>
+ </section>
+<!-- Trainings and Exercises section end-->
     </main>
     <footer></footer>
 </body>
