added meet section and responsive

--- a/index.html
+++ b/index.html
@@ -208,6 +208,58 @@ Mile Easily start  -->
         </div>
   </section>
  <!-- BMI Calculator end -->
+
+ <!-- Meet Our Team section start -->
+    <section class="team-section">
+        <h3 class="section-title">Meet Our Team</h3>
+        <p class="section-description">Meet our team of dedicated professionals who are passionate about delivering exceptional results and driving innovation.</p>
+
+        <div class="training-img-container">
+            <div class="grid-item-1">
+                <div><img src="images/trainer1.png" alt=""></div>
+            <div class="transform">
+                <h3>Jarome Bell</h3>
+                <p>Trainer</p>
+            </div>
+            </div>
+            <div class="grid-item-2">
+                <div><img src="images/trainer2.png" alt=""></div>
+                <div class="transform">
+                    <h3>Cameron Williamson</h3>
+                    <p>Trainer</p>
+                </div>
+            </div>
+            <div class="grid-item-3">
+                <div><img src="images/trainer3.png" alt=""></div>
+                <div class="transform">
+                    <h3>Darrel Stewadt</h3>
+                    <p>Trainer</p>
+                </div>
+            </div>
+            <div class="grid-item-4">
+                <div><img src="images/trainer4.png" alt=""></div>
+            <div class="transform">
+                <h3>Dianna Russel</h3>
+                <p>Trainer</p>
+            </div>
+            </div>
+            <div class="grid-item-5">
+                <div><img src="images/trainer5.png" alt=""></div>
+                <div class="transform">
+                    <h3>Cody Fisher</h3>
+                    <p>Trainer</p>
+                </div>
+            </div>
+            <div class="grid-item-6">
+               <div> <img src="images/trainer6.png" alt=""></div>
+               <div class="transform">
+                <h3>Theresa Webb</h3>
+                <p>Trainer</p>
+            </div>
+            </div>
+        </div>
+    </section>
+ <!-- Meet Our Team section end -->
     </main>
     <footer></footer>
 </body>
