added challenge section

--- a/index.html
+++ b/index.html
@@ -148,6 +148,31 @@ Mile Easily start  -->
  </section>
 <!-- Trainings and Exercises section end-->
 
+<!-- why exercise Need-->
+<section>
+    <h2 class="section-title">Why Exercise Need</h2>
+    <p class="section-description">Exercise is essential because it improves physical health, boosts mental well-being, increases energy levels, and helps prevent chronic diseases..</p>
+    <div class="need-card-container">
+        <div class="need-card">
+            <img src="images/image 2.png" alt="">
+            <h3 class="card-title-1">Improves physical health</h3>
+            <p class="card-description-1">Regular exercise improves physical health by strengthening muscles, boosting cardiovascular function, enhancing flexibility, and reducing the risk of chronic diseases..</p>
+        </div>
+        <div class="need-card">
+            <img src="images/image 3.png" alt="">
+            <h3 class="card-title-1">Improving your mental wellbeing</h3>
+            <p class="card-description-1">Improving your mental well-being involves adopting healthy habits like regular exercise, mindfulness, and maintaining a balanced lifestyle to reduce stress and enhance emotional resilience..</p>
+        </div>
+        <div class="need-card">
+            <img src="images/image 4.png" alt="">
+            <h3 class="card-title-1">Boost your energy</h3>
+            <p class="card-description-1">Engaging in regular physical activity can boost your energy levels, leaving you feeling more vibrant and ready to tackle the day.".</p>
+        </div>
+        
+    </div>
+</section>
+<!-- why exercise end -->
+
  <!-- BMI Calculator start -->
   <section class="bmi-calculator-section">
     <div class="bmi-content"><h3 class="section-title">BMI Calculator</h3>
